# migratable-counter

./: Cargo.toml  README.md
contracts/counter/: Cargo.toml
contracts/counter-new/: Cargo.toml
contracts/counter-new/examples/: schema.rs
contracts/counter-new/schema/: counter-new.json  counter.json
contracts/counter-new/src/: contract.rs
contracts/counter-new/src/actions/: execute.rs  instantiate.rs  other.rs  query.rs
contracts/counter/examples/: schema.rs
contracts/counter/schema/: counter.json
contracts/counter/src/: contract.rs
contracts/counter/src/actions/: execute.rs  instantiate.rs  other.rs  query.rs
scripts/: package-lock.json  package.json
scripts/src/backend/services/: call-contract.ts  store-contract.ts
scripts/src/common/account/: cw-helpers-new.ts  cw-helpers.ts
scripts/src/common/codegen/: Counter.client.ts  Counter.message-composer.ts  Counter.types.ts  CounterNew.client.ts  CounterNew.message-composer.ts  CounterNew.types.ts
scripts/src/common/config/: index.ts  stargaze-counter.json  stargaze-counter_new.json
scripts/src/common/interfaces/: index.ts
tests/: Cargo.toml
tests/src/: counter.rs  lib.rs
tests/src/helpers/: counter.rs  counter_new.rs
tests/src/helpers/suite/: codes.rs  core.rs  types.rs
