[workspace]
members = [
    "contracts/*",
    "packages/*",
    "tests"
]
exclude = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "1.3.0"
cosmwasm-std = "1.3.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
serde = "1.0.163"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
anyhow = "1.0.71"
cw-multi-test = "0.16.5"
speculoos = "0.11.0"
semver = "1.0.20"

counter-base = { path = "./packages/counter-base" }

counter = { path = "./contracts/counter" }
counter-new = { path = "./contracts/counter-new" }
